<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_black"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/header_iv"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:contentDescription="@null"
            android:foreground="@drawable/mask"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/header_image" />

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="56dp"
            android:alpha=".5"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif-light"
            android:includeFontPadding="false"
            android:lineSpacingExtra="4sp"
            android:text="@string/button_back_title"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/movie_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="222dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/header_iv"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/movie_pg_tw"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/age_pg_background"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/pg_label"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_name_tw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="2"
                android:text="@string/avengers_endgame"
                android:textColor="@color/white_headers"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/genre_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/parent_margin"
            android:fontFamily="sans-serif-light"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_label" />

        <RatingBar
            android:id="@+id/reviews_rb"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:numStars="5"
            android:progressBackgroundTint="@color/gray_rating_bar"
            android:progressTint="@color/pink_rating_bar"
            android:rating="4"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@+id/reviews_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/reviews_tv" />

        <TextView
            android:id="@+id/reviews_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews_125"
            android:textAllCaps="true"
            android:textColor="@color/gray_rating_bar"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/reviews_rb"
            app:layout_constraintTop_toBottomOf="@+id/genre_tv" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/parent_margin"
            android:shadowColor="@color/shadows_color"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/storyline"
            android:textColor="@color/white_headers"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviews_tv" />

        <TextView
            android:id="@+id/storyline_desc_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginEnd="@dimen/parent_margin"
            android:alpha=".75"
            android:fontFamily="sans-serif-light"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/story_end_game"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <TextView
            android:id="@+id/cast_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/parent_margin"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:shadowColor="@color/shadows_color"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/cast"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_desc_tv" />


        <ImageView
            android:id="@+id/actor1_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/downey"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor2_iv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/cast_tv"
            app:layout_constraintTop_toBottomOf="@+id/cast_tv" />


        <ImageView
            android:id="@+id/actor2_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/evans"
            app:layout_constraintBottom_toBottomOf="@+id/actor1_iv"
            app:layout_constraintEnd_toStartOf="@+id/actor3_iv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor1_iv"
            app:layout_constraintTop_toTopOf="@+id/actor1_iv" />

        <ImageView
            android:id="@+id/actor3_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ruffalo"
            app:layout_constraintBottom_toBottomOf="@+id/actor1_iv"
            app:layout_constraintEnd_toStartOf="@+id/actor4_iv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor2_iv"
            app:layout_constraintTop_toTopOf="@+id/actor1_iv" />

        <ImageView
            android:id="@+id/actor4_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/hemsworth"
            app:layout_constraintBottom_toBottomOf="@+id/actor1_iv"
            app:layout_constraintEnd_toEndOf="@+id/cast_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor3_iv"
            app:layout_constraintTop_toTopOf="@+id/actor1_iv" />


        <TextView
            android:id="@+id/actor1_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:maxLines="2"
            android:text="@string/downey"
            android:textColor="@color/white_actors"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/actor1_iv"
            app:layout_constraintStart_toStartOf="@+id/actor1_iv"
            app:layout_constraintTop_toBottomOf="@+id/actor1_iv" />

        <TextView
            android:id="@+id/actor4_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:maxLines="2"
            android:text="@string/hemsworth"
            android:textColor="@color/white_actors"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/actor4_iv"
            app:layout_constraintStart_toStartOf="@+id/actor4_iv"
            app:layout_constraintTop_toBottomOf="@+id/actor4_iv" />

        <TextView
            android:id="@+id/actor3_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:maxLines="2"
            android:text="@string/ruffalo"
            android:textColor="@color/white_actors"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/actor3_iv"
            app:layout_constraintStart_toStartOf="@+id/actor3_iv"
            app:layout_constraintTop_toBottomOf="@+id/actor3_iv" />

        <TextView
            android:id="@+id/actor2_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:maxLines="2"
            android:text="@string/evans"
            android:textColor="@color/white_actors"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/actor2_iv"
            app:layout_constraintStart_toStartOf="@+id/actor2_iv"
            app:layout_constraintTop_toBottomOf="@+id/actor2_iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>