<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_black"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/header_iv"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:contentDescription="@null"
            android:foreground="@drawable/ic_mask_description"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:alpha=".5"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="top"
            android:includeFontPadding="false"
            android:lineSpacingExtra="4sp"
            android:padding="8dp"
            android:text="@string/button_back_title"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/movie_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="222dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/header_iv"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/movie_pg_tw"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/age_pg_background"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="13+" />

            <TextView
                android:id="@+id/movie_name_tw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="2"
                android:maxLines="2"
                android:textColor="@color/white_headers"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="Avengers: \nEnd game" />
        </LinearLayout>

        <TextView
            android:id="@+id/genre_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/parent_margin"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_label"
            tools:text="Action, fantasy" />

        <RatingBar
            android:id="@+id/reviews_rb"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:numStars="5"
            android:progressBackgroundTint="@color/gray_rating_bar"
            android:progressTint="@color/pink_rating_bar"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@+id/reviews_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/reviews_tv"
            tools:rating="4" />

        <TextView
            android:id="@+id/reviews_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textAllCaps="true"
            android:textColor="@color/gray_rating_bar"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/reviews_rb"
            app:layout_constraintTop_toBottomOf="@+id/genre_tv"
            tools:text="125 reviews" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/parent_margin"
            android:shadowColor="@color/shadows_color"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/storyline"
            android:textColor="@color/white_headers"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviews_tv" />

        <TextView
            android:id="@+id/storyline_desc_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginEnd="@dimen/parent_margin"
            android:alpha=".75"
            android:fontFamily="sans-serif-light"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline"
            tools:text="Film description" />

        <TextView
            android:id="@+id/cast_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/parent_margin"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:shadowColor="@color/shadows_color"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/cast"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_desc_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actor_list_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast_tv"
            tools:listitem="@layout/actor_item"
            tools:orientation="horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>